crates/spicy_parser/src/snapshots/spicy_parser__statement_phase__tests__statements-with_line_continuation.snap
---
source: crates/spicy_parser/src/statement_phase.rs
expression: stream
---
Statements {
    statements: [
        Statement {
            tokens: [
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 0,
                        end: 3,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 4,
                        end: 4,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 5,
                        end: 6,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 7,
                        end: 8,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 9,
                        end: 9,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 10,
                        end: 10,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 11,
                        end: 14,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 15,
                        end: 15,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 16,
                        end: 20,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 20,
                source_index: SourceFileId(
                    0,
                ),
            },
        },
        Statement {
            tokens: [
                Token {
                    kind: Asterisk,
                    id: None,
                    span: Span {
                        start: 22,
                        end: 22,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 23,
                        end: 23,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 24,
                        end: 27,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 28,
                        end: 28,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 29,
                        end: 30,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 31,
                        end: 31,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 32,
                        end: 32,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 33,
                        end: 33,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 34,
                        end: 36,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 37,
                        end: 37,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 38,
                        end: 44,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
            ],
            span: Span {
                start: 22,
                end: 44,
                source_index: SourceFileId(
                    0,
                ),
            },
        },
        Statement {
            tokens: [
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 46,
                        end: 47,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 48,
                        end: 48,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 49,
                        end: 50,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 51,
                        end: 51,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 52,
                        end: 54,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 57,
                        end: 57,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Number,
                    id: None,
                    span: Span {
                        start: 58,
                        end: 58,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 59,
                        end: 59,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 60,
                        end: 60,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
            ],
            span: Span {
                start: 46,
                end: 60,
                source_index: SourceFileId(
                    0,
                ),
            },
        },
        Statement {
            tokens: [
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 62,
                        end: 63,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 64,
                        end: 64,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 65,
                        end: 66,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 67,
                        end: 67,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 68,
                        end: 70,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: WhiteSpace,
                    id: None,
                    span: Span {
                        start: 73,
                        end: 73,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Number,
                    id: None,
                    span: Span {
                        start: 74,
                        end: 74,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 75,
                        end: 75,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
            ],
            span: Span {
                start: 62,
                end: 75,
                source_index: SourceFileId(
                    0,
                ),
            },
        },
        Statement {
            tokens: [
                Token {
                    kind: Dot,
                    id: None,
                    span: Span {
                        start: 77,
                        end: 77,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
                Token {
                    kind: Ident,
                    id: None,
                    span: Span {
                        start: 78,
                        end: 80,
                        source_index: SourceFileId(
                            0,
                        ),
                    },
                },
            ],
            span: Span {
                start: 77,
                end: 80,
                source_index: SourceFileId(
                    0,
                ),
            },
        },
    ],
}
